// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Avatar with blob and avatar in blob unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <figure>
        <img
          alt=""
          role="presentation"
          src="https://aisuru.com/images/aisuru/square_logo.png"
        />
      </figure>
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders Avatar with custom glb model unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders Avatar with rpm 3d avatar unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;

exports[`renders defualt Avatar (blob) unchanged 1`] = `
<div>
  <div
    class="memori--blob-container"
  >
    <div
      class="memori-blob"
    >
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
      <div
        class="mainDiv"
      />
    </div>
  </div>
</div>
`;
